<resources>
    <string name="app_name">ProjetAndroid</string>
    <string name="logintxt">login</string>
    <string name="passtxt">Password</string>
    <string name="validBtn">Connect</string>
    <string name="registerBtn">Register</string>
    <string name="inscriptionBtn">Inscription</string>
    <string name="retourBtn">Retour</string>
    <string name="btn">Retour</string>
    <string name="frameBtn">Frame</string>
    <string name="btnSend">Send</string>
    <string name="idText">Champs de saisi</string>
    <string name="errorPwd">Mots de passe non identiques</string>
    <string name="errorPwdVide">Veuillez renseigner votre mot de passe</string>
    <string name="saveDb">Vous etes entregistré </string>
    <string name="errorLogin">Veuillez renseigner votre login</string>
    <string name="errorPwd2Vide">Veuillez confirmer votre mot de passe</string>
    <string name="connnexionReussi">Vous etes connecté</string>
    <string name="connexionEchoue">login ou mot de passe incorrect</string>
    <string name="sendButton">send</string>
    <string name="contact_name">Contact Name</string>
    <string name="add">Add</string>
    <string name="cellulite">cellulite</string>
    <string name="switchstr">Switch</string>
    <string name="contactAjoute">Vous avez ajouté un contact</string>
    <string name="local_service_label">HelloWorld</string>
    <string name="remote_service_started">remote service started</string>
    <string name="remote_service_stopped">remote service stopped</string>
    <string name="write_your_message_here">write your message here</string>
    <string name="fragment_2">FRAGMENT 2</string>
    <string name="contactnonAjoute">Le contact ne peut pas contenir de caractères spéciaux</string>
    <string name="contactnonVide">Le conatact ne peut pas etre vide !</string>
</resources>
